# SkillPools

./: .gitignore  README.md
100QuestionforImageProcessing/: 01_channel_swapping.ipynb  03_Thresholding.ipynb  04_Otsu'sMethod.ipynb  06_discretization_of_color.ipynb  07-08_pooling.ipynb  09-12_Filter.ipynb  13-17_filter_for_feature.ipynb  20-23_histogram_op.ipynb  24_gamma_correction.ipynb  25_Nearest-neighbor_interpolation.ipynb  26-27_interpolation.ipynb  28-31_ afine_transformations .ipynb  2_grayScale.ipynb  32-35_fourier_transform.ipynb  36-40_JPEG_compress.ipynb  41-43_canny_edge_detection.ipynb  44-46_hough_transform.ipynb  47-53_morphological_processing.ipynb  4_Otsu'sMethod.ipynb  54-57_template_matching.ipynb  5_HSVConversion.ipynb
100QuestionforImageProcessing/pic/: bilinear_interpolation.vsdx
DRL/: readme.md
DRL/DQN/: ReplayBuffer.py  run_ddqn.py  run_dqn.py  run_dueling_dqn.py  run_per_ddqn.py  segment_tree.py
DRL/Q-learning/: Qlearning_demo_1dim.py  test.py
DRL/Q-learning/demo_2_dim/: RL_brain.py  maze_env.py  train.py
DRL/SAC/: buffer.py  network.py  run_sac.py
DRL/noise-DQN/: run_noise_dqn.py
DRL/sarsa/: RL_brain.py  train.py
cplusplus_tutorials/: Astar.cpp  CMakeLists.txt  deque_demo.cpp  double_pointer_demo.cpp  link_demo.cpp  map_demo.cpp  map_demo2.cpp  map_demo3.cpp  queue_demo.cpp  read_txt.cpp  readme.md  set_demo.cpp  stack_demo.cpp  string_demo.cpp  struct_demo.cpp  struct_demo2.cpp  struct_demo3.cpp  thread_demo.cpp  vector_demo.cpp  work1.cpp  yaml_demo.cpp
cplusplus_tutorials/data/: map.txt  map2.txt  map3.txt  yaml_test.yaml
cplusplus_tutorials/leetcode/: largeNumSub.cpp
cplusplus_tutorials/ptr/: shard_ptr_demo.cpp
eigen_tutorials/: CMakeLists.txt  eigen_geometry.cpp  eigen_trans_demo.cpp  eigen_transfrom.cpp  readme.md  test.cpp
open3d_tutorials/: io_demo.py
osqp_tutorials/: CMakeLists.txt  osqp_demo.cpp  qpproblem_demo.cpp  readme.md
osqp_tutorials/include/: QPProblem.hpp
pcl_tutorials/: CMakeLists.txt  appendix_function.cpp  box_filter_demo.cpp  get_box_demo.cpp  kdtree_search_demo.cpp  make_traj_demo.cpp  pcl_io_demo.cpp  pcl_io_write.cpp  readme.md  test2.cpp
pcl_tutorials/data/: 0.pcd  action_table.txt  traj_ds_remove.pcd  trj_dataset.pcd
python/: copy_or_equal.ipynb
python/Astar3D/: Astar3D.py  readme.md  waypoint.txt
python/numpy/: numpy_fuction_example.ipynb  numpy_slide.ipynb  numpy_type.ipynb
pytorch_tutorials/: cifar_model.py  model_pretrained.py  model_save.py  my_dataloader.py  my_dataset.py  my_model.py  my_tensorboard.py  my_transforms.py  nn_cifar.py  nn_conv.py  nn_conv2d.py  nn_linear.py  nn_loss.py  nn_maxpool.py  nn_relu.py  pred_model.py  readme.md  torch_silde.py  train_gpu_1.py  train_gpu_2.py  train_model.py  vision_dataset.py
