cmake_minimum_required(VERSION 3.20)
project(cplusplus_tutorials)

set(CMAKE_CXX_STANDARD 11)

add_executable(read_txt read_txt.cpp)

add_executable(vector_demo vector_demo.cpp)

add_executable(struct_demo struct_demo.cpp)

add_executable(struct_demo2 struct_demo2.cpp)

add_executable(struct_demo3 struct_demo3.cpp)

add_executable(queue_demo queue_demo.cpp)

add_executable(deque_demo deque_demo.cpp)

add_executable(map_demo map_demo.cpp)

add_executable(map_demo2 map_demo2.cpp)

add_executable(map_demo3 map_demo3.cpp)
